client/src/Components/Cart/styles.module.scss
@import "../../Styles/variables";

.cartWrapper {
  display: flex;
  justify-content: center;
  align-items: center;
}

.cartIcon {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 0.5rem 0 0.5rem;
  height: 46px;
  position: relative;
  width: 46px;
  font-size: 2rem;
  color: $primary-dark;
  border: none;
  z-index: 2;
  background: $primary-color;
  border-radius: 10px;
  box-shadow: $box-shadow-2;
  cursor: pointer;
}

// SIDE PANEL
@keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

.sidePanelWrapper {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  position: fixed;
  width: 30rem;
  height: 80vh;
  // max-height: 70%;
  top: 6rem;
  right: 0;
  backdrop-filter: blur(10px);
  z-index: 25;
  margin: 0 2rem 2rem 0;
  background: $primary-color;
  border-radius: 10px;
  box-shadow: $box-shadow-2;
  transform: translateX(20%);
  opacity: 0;
  transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
}

.shadow {
  position: fixed;
  background: linear-gradient(
    to left,
    rgba(0, 10, 29, 0.1) 0%,
    rgba(0, 10, 29, 0.05) 5%,
    rgba(0, 10, 29, 0.03) 40%,
    rgba(0, 10, 29, 0.02) 65%,
    rgba(0, 10, 29, 0) 100%
  );

  width: 50rem;
  z-index: 20;
  min-height: 110vh;
  pointer-events: none;
  top: -6rem;
  right: -2rem;
  transform: translateX(20%);
  opacity: 0;
  transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
}

.sidePanel {
  width: 100%;
  height: calc(80vh - 12rem);
  padding: 0.7rem 2rem 0.7rem 2rem;
  overflow-y: auto;
}

.sidePanelWrapper.show,
.shadow.show,
.panelBackground.show {
  transform: translateX(0);
  opacity: 1;
}

.sidePanelWrapper.fadeOut,
.shadow.fadeOut,
.panelBackground.fadeOut {
  pointer-events: none;
  animation: fadeOut 0.2s ease-in-out forwards;
}

//sidepanel

.cartTitle {
  text-align: left;
  margin: 0;
  font-size: 1rem;
  border-bottom: 1px solid $color;
  position: fixed;
  z-index: 2;
  background: $primary-color;
  width: 100%;
  left: 0;
  top: 0;
  padding: 0.5rem 1rem 0.5rem 1rem;
}

.cartList {
  list-style-type: none;
  padding: 20px 0 0 0;
  margin: 0;
  height: 80%;
}

.cartItem {
  display: flex;
  align-items: center;
  margin: 0.5rem 0 0.5rem 0;
  position: relative;
  border-bottom: 1px solid $color;

  box-shadow: none;
  transition: all 0.2s ease-in-out;
}
.cartItem:hover {
  background: $background-hover-1;
  box-shadow: $box-shadow-2;
  transition: all 0.2s ease-in-out;
}

.itemImage {
  width: 6rem;
  height: 6rem;
  object-fit: cover;
  margin: 0.5rem 1rem 0.5rem 0.5rem;
}

.itemDetails {
  flex-grow: 1; // Allow details to take available space
  height: 80px;
}

.itemName {
  position: relative;
  top: 0;
  padding: 0 0 0 1.2rem;
  font-size: 1rem;
  font-weight: 700;
}

.itemPrice {
  display: flex;
  flex-direction: row;
  position: absolute;
  justify-content: center;
  align-items: center;
  left: 140px;
  vertical-align: middle;
  bottom: 15px;
  width: auto;
  overflow: hidden; /* Hides any overflow text */
  text-overflow: ellipsis; /* Optionally adds "..." to indicate overflow */
  font-size: 0.8rem;
}

.itemPrice h3 {
  margin: 0 0.5rem 0 0;
}

.itemPrice p {
  bottom: 0;
}

.itemQuantity {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: end;
  font-size: 0.8rem;
  text-align: center;
  z-index: 1;
  vertical-align: middle;
  position: absolute;
  right: 10px;
  bottom: 15px;
}

.itemQuantityInput {
  width: 2rem;
  text-align: center;
  z-index: 2;
  border: 1px solid $color;
}

.quantityArrows {
  display: flex;
  font-size: 0.8rem;
  font-weight: 500;
  padding: 0.15rem 0.4rem 0.15rem 0.4rem;
  cursor: pointer;
  border: 1px solid $color;
  z-index: 2;
  transition: all 0.2s ease-in-out;
}

.quantityArrows:hover {
  background: $dark;
  transition: all 0.2s ease-in-out;
}

h2 {
  margin-bottom: 1rem; // Space below the heading
}

.totalItemCountContainer {
  display: flex;
  position: absolute;
  top: -10px;
  right: -10px;
}

.totalItemCount {
  width: 25px;
  height: 25px;
  font-size: 0.7rem;
  font-weight: bold;
  background: $primary-dark;
  border: 2px $light solid;
  box-shadow: $box-shadow-2;
  color: $light;
  border-radius: 50%;
  padding: 0.2rem;
}

//side panel footer

.sidePanelFooter {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 3.1rem;
  display: flex;
  z-index: 1;
  align-items: center;
  justify-content: end;
  background: $primary-color;
  padding: 10rem 1rem 2rem 1rem;
}

.clearButton {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 6px 14px;
  cursor: pointer;
  border-radius: 6px;
  border: none;
  left: 20px;
  position: absolute;
  background: transparent;
  color: $font-color-1;
  font-size: 0.8rem;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
}

.clearButton:hover {
  background: $selected-color;
}

.clearButton svg {
  fill: $light;
  background: $primary-red-1;
  font-size: 1.5rem;
  padding: 2px;
  margin-right: 5px;
  border-radius: 5px;
}

.orderButton {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 6px 14px;
  cursor: pointer;
  border-radius: 6px;
  border: none;
  right: 20px;
  position: absolute;
  color: $dark;
  background: linear-gradient(to right, $primary-green-1, $primary-green-2);
  font-size: 0.8rem;
  user-select: none;
  box-shadow: $box-shadow-2;
  -webkit-user-select: none;
  touch-action: manipulation;
  transition: all 0.2s ease-in-out;
}

.orderButton:hover {
  color: $primary-green-1;
  background: $dark;
  transform: scale(1.1);
  transition: all 0.1s ease-in-out;
}

.orderButton p {
  padding: 0 0 0 0.5rem;
}

.deleteItemContainer {
  display: flex;
  width: auto;
  height: 100%;
  top: 5px;
  right: 10px;
  z-index: 0;

  justify-content: end;
  align-items: start;
  position: absolute;
}

.deleteItem {
  padding: 3px;
  margin: 5px;
  border: none;
  background: $light;
  border-radius: 5px;
  cursor: pointer;
  color: $primary-red-1;
  font-size: 1.5rem;
  height: 30px;
  transition: all 0.2s ease-in-out;
}

.deleteItem svg {
  fill: $primary-red-1;
}

.deleteItem:hover {
  transform: scale(1.2);
  color: $primary-red-2;
  transition: all 0.2s ease-in-out;
}

.emptyCart {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
  position: relative;
}

.emptyCart svg {
  font-size: 4rem;
  padding: 1rem;
}

.cartSummary {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  position: absolute;
  bottom: 90px;
  z-index: 0;
  padding: 0.5rem 1rem 1.5rem 1rem;
  height: auto;
  width: 85%;
  left: 7%;
  border-top: 1px solid $color;
  margin: 0 auto 0 auto;
  background: $primary-color;
}

.cartSummary span,
.cartTotal span {
  right: 0;
  position: absolute;
}

.cartSummary p {
  font-size: 0.8rem;
  color: $font-color-1;
  margin: 0.2rem 0 0.2rem 0;
}

.cartTotal {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  position: absolute;
  bottom: 50px;
  z-index: 0;
  background: $primary-color;
  font-size: 1rem;
  padding: 0.5rem 1rem 1.5rem 1rem;
  height: auto;
  width: 85%;
  left: 7%;
  border-top: 1px solid $color;
  margin: 0 auto 0 auto;
}

.loader {
  backdrop-filter: blur(5px);
  // pointer-events: none;
  cursor: progress;
  z-index: 1000;
  opacity: 1;
  transition: all 0.1s ease-in-out;
}
.loaded {
  opacity: 0;
  backdrop-filter: none;
  transition: all 0.3s ease-in-out;
}

.disabled {
  opacity: 0.5;
  pointer-events: none;
  cursor: not-allowed;
}

.panelBackground {
  opacity: 0;
  position: fixed;
  pointer-events: none;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  background: transparent;
  transition: all 0.3s ease-in-out;
}

//MOBILE

@media screen and (max-width: 80rem) {
  .sidePanelWrapper {
    margin: 0;
    width: 97%;
    left: 1.5%;
  }

  .panelBackground {
    opacity: 1;
    pointer-events: auto;
    background: rgba(255, 255, 255, 0.5);
    backdrop-filter: blur(5px);
  }
}

@media screen and (max-width: 40rem) {
  .sidePanelWrapper {
    margin: 0;
    width: 95%;
    left: 2.5%;
  }
  .itemName {
    padding: 0;
  }
  .itemPrice {
    left: 120px;
  }
  .cartList {
    height: calc(90% - 190px);
  }
}

